<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment_State02_Countdown4">

    <TextView
        android:id="@+id/txtCountdownTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Countdown"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/txtClassFlag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ClassFlag"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <ImageView
        android:id="@+id/imgClassFlag"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        app:srcCompat="@mipmap/ic_flag_class_opti" />

    <TextView
        android:id="@+id/txtStartFlag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/StartFlag"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <ImageView
        android:id="@+id/imgStartFlag"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        app:srcCompat="@mipmap/ic_flag_alphabet_papa" />

    <TextView
        android:id="@+id/txtPrepareTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Time"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/txtTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

    <Button
        android:id="@+id/btnAbort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SignalAbort" />

    <View
        android:id="@+id/viewSpacer2"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@android:color/holo_red_light" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ResetSetup"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Update"
        android:textColor="@color/colorPrimary" />

</LinearLayout>