<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment_State00_Setup">

    <TextView
        android:id="@+id/txtSetup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Setup"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/txtClassFlag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ClassFlag" />

    <Spinner
        android:id="@+id/spinnerlassFlag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinnerItems_ClassFlag"/>

    <TextView
        android:id="@+id/txtPrepareTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PrepareTime" />
    <Spinner
        android:id="@+id/spinnerPrepareTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinnerItems_PrepareTime"/>

    <TextView
        android:id="@+id/txtCountdownTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Countdown" />

    <Spinner
        android:id="@+id/spinnerCountdownTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinnerItems_CountdownTime" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/Start" />

</LinearLayout>